--- a/cloudpilot-ionic/src/app/tabs/tabs.page.html
+++ b/cloudpilot-ionic/src/app/tabs/tabs.page.html
@@ -1,19 +1,24 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="emulation">
+      <ion-icon name="phone-portrait-outline"></ion-icon>
+      <ion-label>Emulator</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="sessions">
+      <ion-icon name="albums-outline"></ion-icon>
+      <ion-label>Sessions</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="roms">
+      <ion-icon name="hardware-chip-outline"></ion-icon>
+      <ion-label>ROMs</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="settings">
+      <ion-icon name="cog-outline"></ion-icon>
+      <ion-label>Settings</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
