Prototype emulation UI.

--- a/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
+++ b/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
@@ -1,6 +1,24 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Emulator</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon name="power-outline"></ion-icon>
+      </ion-button>
+      <ion-button>
+        <ion-icon name="add-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    <ion-buttons slot="start">
+      <ion-button>
+        <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+      </ion-button>
+      <ion-button>
+        <ion-icon name="checkmark-circle-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
