--- a/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
+++ b/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
@@ -24,4 +24,8 @@
 
 <ion-content>
 
+  <div class="container">
+    <canvas #canvas [width]="canvasWidth" [height]="canvasHeight"></canvas>
+  </div>
+
 </ion-content>
