--- a/cloudpilot-ionic/src/app/page/emulation/emulation.page.scss
+++ b/cloudpilot-ionic/src/app/page/emulation/emulation.page.scss
@@ -1,3 +1,17 @@
 ion-title {
     text-align: center;
 }
+
+.container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+canvas {
+    max-width: 100%;
+    max-height: 100%;
+    padding: 5px;
+}
