Slightly more refined version of the statusbar hack, avoid change detection on mouse and touch events.

--- a/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
+++ b/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
@@ -25,10 +25,7 @@
 <ion-content>
 
   <div class="container">
-    <canvas #canvas [width]="canvasWidth" [height]="canvasHeight" (mousedown)="handeMouseEvent($event)"
-      (mouseup)="handeMouseEvent($event)" (mousemove)="handeMouseEvent($event)" (touchstart)="handleTouchEvent($event)"
-      (touchmove)="handleTouchEvent($event)" (touchend)="handleTouchEvent($event)"
-      (touchcancel)="handleTouchEvent($event)"></canvas>
+    <canvas #canvas [width]="canvasWidth" [height]="canvasHeight"></canvas>
   </div>
 
 </ion-content>
