--- a/cloudpilot-ionic/src/app/page/emulation/emulation.page.scss
+++ b/cloudpilot-ionic/src/app/page/emulation/emulation.page.scss
@@ -13,5 +13,8 @@ ion-title {
 canvas {
     max-width: 100%;
     max-height: 100%;
+    height: 750px;
+    width: 480px;
     padding: 5px;
+    object-fit: contain;
 }
