--- a/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
+++ b/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
@@ -7,7 +7,7 @@
         [disabled]="!emulationService.isRunning()">
         <ion-icon name="power-outline"></ion-icon>
       </ion-button>
-      <ion-button [disabled]="!emulationService.isRunning() || emulationService.isPowerOff()">
+      <ion-button [disabled]="installFileDisabled" (click)="installFiles()">
         <ion-icon name="add-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
