Canvas tuning: add frame, straighten out color scheme.

--- a/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
+++ b/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
@@ -26,7 +26,8 @@
 <ion-content>
 
   <div class="container">
-    <canvas #canvas [width]="canvasWidth" [height]="canvasHeight"></canvas>
+    <canvas #canvas [width]="canvasWidth" [height]="canvasHeight" [style.width]="cssWidth"
+      [style.height]="cssHeight"></canvas>
   </div>
 
 </ion-content>
