Style emulator background, use session name as title.

--- a/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
+++ b/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Emulator</ion-title>
+    <ion-title>{{title}}</ion-title>
 
     <ion-buttons slot="end">
       <ion-button (mousedown)="powerButtonDown()" (mouseup)="powerButtonUp()"
