New "install file" icon.

--- a/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
+++ b/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
@@ -8,7 +8,7 @@
         <ion-icon name="power-outline"></ion-icon>
       </ion-button>
       <ion-button [disabled]="installFileDisabled" (click)="installFiles()">
-        <ion-icon name="add-outline"></ion-icon>
+        <ion-icon name="download-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
 
