--- a/cloudpilot-ionic/src/app/tabs/tabs.page.html
+++ b/cloudpilot-ionic/src/app/tabs/tabs.page.html
@@ -13,7 +13,7 @@
 
     <ion-tab-button tab="settings">
       <ion-icon name="cog-outline"></ion-icon>
-      <ion-label>Settings</ion-label>
+      <ion-label>About / Settings</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
