--- a/cloudpilot-ionic/src/app/tabs/tabs.page.html
+++ b/cloudpilot-ionic/src/app/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar [class.small-ui]="smallUI" slot="bottom">
     <ion-tab-button tab="emulation">
       <ion-icon name="phone-portrait-outline"></ion-icon>
       <ion-label>Emulator</ion-label>
