--- a/cloudpilot-ionic/src/app/tabs/tabs.page.scss
+++ b/cloudpilot-ionic/src/app/tabs/tabs.page.scss
@@ -1,1 +1,12 @@
 
+ion-tab-bar.small-ui {
+    height: 25px;
+
+    ion-icon {
+        height: 21px;
+    }
+
+    ion-label {
+        display: none;
+    }
+}
