Move power button to menu, push / release automaticallly.

--- a/cloudpilot-ionic/src/app/page/emulation/context-menu/context-menu.component.html
+++ b/cloudpilot-ionic/src/app/page/emulation/context-menu/context-menu.component.html
@@ -1,4 +1,7 @@
 <ion-list>
+  <ion-item button [detail]="false" (click)="power()" [disabled]="!emulationService.isRunning()">
+    Power
+  </ion-item>
   <ion-item button [detail]="false" (click)="reset()" [disabled]="!emulationService.isRunning()">
     Reset
   </ion-item>
