Help on emulation tab.

--- a/cloudpilot-ionic/src/app/component/help/help.component.html
+++ b/cloudpilot-ionic/src/app/component/help/help.component.html
@@ -9,5 +9,5 @@
 </ion-header>
 
 <ion-content fullscreen>
-    <markdown src="assets/doc/sessions.md"></markdown>
+    <markdown [src]="url"></markdown>
 </ion-content>
