--- a/cloudpilot-ionic/src/app/page/emulation/context-menu/context-menu.component.html
+++ b/cloudpilot-ionic/src/app/page/emulation/context-menu/context-menu.component.html
@@ -11,4 +11,7 @@
   <ion-item button [detail]="false" (click)="resetHard()" [disabled]="!emulationService.isRunning()">
     Hard reset
   </ion-item>
+  <ion-item button [detail]="false" (click)="help()">
+    Help
+  </ion-item>
 </ion-list>
