--- a/cloudpilot-ionic/src/app/page/settings/settings.page.html
+++ b/cloudpilot-ionic/src/app/page/settings/settings.page.html
@@ -1,6 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Settings</ion-title>
+
+    <ion-buttons slot="secondary">
+      <ion-button (click)="showHelp()">
+        <ion-icon name="help-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
