--- a/cloudpilot-ionic/src/app/component/help/help.component.scss
+++ b/cloudpilot-ionic/src/app/component/help/help.component.scss
@@ -3,3 +3,11 @@ markdown {
     padding-left: 1em;
     padding-right: 1em;
 }
+
+.loader {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
