Add volume setting.

--- a/cloudpilot-ionic/src/app/page/settings/settings.page.scss
+++ b/cloudpilot-ionic/src/app/page/settings/settings.page.scss
@@ -1,5 +1,7 @@
 .version {
-    margin-top: 3em;
+    position: absolute;
+    width: 100%;
+    bottom: 1em;
     text-align: center;
     font-size: 0.75em;
 }
