--- a/cloudpilot-ionic/src/app/page/settings/settings.page.html
+++ b/cloudpilot-ionic/src/app/page/settings/settings.page.html
@@ -17,6 +17,15 @@
     </ion-toolbar>
   </ion-header>
 
+  <form [formGroup]="formGroup">
+    <ion-item lines="inset">
+      <ion-label>Volume</ion-label>
+      <ion-range min="0" max="1" step="0.1" formControlName="volume"></ion-range>
+    </ion-item>
+  </form>
+
   <div class="version">cloudpilot version {{version}}</div>
+
+
 
 </ion-content>
