Add PWA install prompt, properly style maskable icons.

--- a/cloudpilot-ionic/src/app/page/settings/settings.page.html
+++ b/cloudpilot-ionic/src/app/page/settings/settings.page.html
@@ -6,6 +6,8 @@
       <ion-button (click)="showHelp()">
         <ion-icon name="help-outline"></ion-icon>
       </ion-button>
+
+      <app-pwa-prompt></app-pwa-prompt>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
