--- a/cloudpilot-ionic/src/app/tabs/tabs.page.html
+++ b/cloudpilot-ionic/src/app/tabs/tabs.page.html
@@ -1,20 +1,27 @@
 <ion-tabs>
 
-  <ion-tab-bar [class.small-ui]="smallUI" slot="bottom">
-    <ion-tab-button tab="emulation">
-      <ion-icon name="phone-portrait-outline"></ion-icon>
-      <ion-label>Emulator</ion-label>
-    </ion-tab-button>
+  <div class="overflow-wrapper">
+    <ion-tab-bar [class.small-ui]="smallUI" slot="bottom">
+      <ion-tab-button tab="emulation">
+        <ion-icon name="phone-portrait-outline"></ion-icon>
+        <ion-label>Emulator</ion-label>
+      </ion-tab-button>
 
-    <ion-tab-button tab="sessions">
-      <ion-icon name="albums-outline"></ion-icon>
-      <ion-label>Sessions</ion-label>
-    </ion-tab-button>
+      <ion-tab-button tab="sessions">
+        <ion-icon name="albums-outline"></ion-icon>
+        <ion-label>Sessions</ion-label>
+      </ion-tab-button>
 
-    <ion-tab-button tab="settings">
-      <ion-icon name="cog-outline"></ion-icon>
-      <ion-label>About / Settings</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
+      <ion-tab-button tab="settings">
+        <ion-icon name="cog-outline"></ion-icon>
+        <ion-label>Settings</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="about">
+        <ion-icon name="help-outline"></ion-icon>
+        <ion-label>About</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </div>
 
 </ion-tabs>
