--- a/cloudpilot-ionic/src/app/tabs/tabs.page.scss
+++ b/cloudpilot-ionic/src/app/tabs/tabs.page.scss
@@ -6,6 +6,10 @@ ion-tab-bar {
 
         ion-icon {
             height: 21px;
+
+            &.md {
+                margin-top: 3px;
+            }
         }
 
         ion-label {
