--- a/cloudpilot-ionic/src/app/page/about/about.page.scss
+++ b/cloudpilot-ionic/src/app/page/about/about.page.scss
@@ -3,5 +3,20 @@
     bottom: 1em;
     text-align: center;
     font-size: 0.75em;
-    margin-bottom: 0.75em;
+    margin-top: 3em;
+    margin-bottom: 1em;
+}
+
+markdown {
+    display: block;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+}
+
+.loader {
+    width: 100%;
+    height: 10em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
