--- a/cloudpilot-ionic/src/app/page/about/about.page.scss
+++ b/cloudpilot-ionic/src/app/page/about/about.page.scss
@@ -7,10 +7,18 @@
     margin-bottom: 1em;
 }
 
+.markdown-container {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+}
+
 markdown {
     display: block;
     margin-left: 0.5em;
     margin-right: 0.5em;
+    max-width: 40em;
 }
 
 .loader {
