--- a/cloudpilot-ionic/src/app/page/about/about.page.html
+++ b/cloudpilot-ionic/src/app/page/about/about.page.html
@@ -23,6 +23,10 @@
     <markdown src="assets/doc/about.md" (load)="loading = false"></markdown>
   </div>
 
-  <div class="version">cloudpilot version {{version}}</div>
+  <div class="version">
+    cloudpilot version {{version}}
+    <br />
+    <a href='javascript:' (click)="showChangelog()">Changelog</a>
+  </div>
 
 </ion-content>
