Actually use the supplied title.

--- a/cloudpilot-ionic/src/app/component/help/help.component.html
+++ b/cloudpilot-ionic/src/app/component/help/help.component.html
@@ -1,6 +1,6 @@
 <ion-header translucent>
     <ion-toolbar>
-        <ion-title>Help</ion-title>
+        <ion-title>{{title}}</ion-title>
 
         <ion-buttons slot="primary">
             <ion-button (click)="modalController.dismiss()">Close</ion-button>
