--- a/cloudpilot-ionic/src/app/page/settings/settings.page.html
+++ b/cloudpilot-ionic/src/app/page/settings/settings.page.html
@@ -24,6 +24,11 @@
       <ion-label>Volume</ion-label>
       <ion-range min="0" max="1" step="0.1" formControlName="volume"></ion-range>
     </ion-item>
+
+    <ion-item lines="inset">
+      <ion-label>Show Statistics</ion-label>
+      <ion-toggle formControlName="showStatistics"></ion-toggle>
+    </ion-item>
   </form>
 
 </ion-content>
