Add backup to PWA

--- a/cloudpilot-ionic/src/app/page/emulation/context-menu/context-menu.component.html
+++ b/cloudpilot-ionic/src/app/page/emulation/context-menu/context-menu.component.html
@@ -11,6 +11,9 @@
   <ion-item button [detail]="false" (click)="resetHard()" [disabled]="!emulationService.isRunning()">
     Hard reset
   </ion-item>
+  <ion-item button [detail]="false" (click)="backup()" [disabled]="backupDisabled">
+    Save backup
+  </ion-item>
   <ion-item button [detail]="false" (click)="help()">
     Help
   </ion-item>
