Add logo to bottom of "About" page.

--- a/cloudpilot-ionic/src/app/page/about/about.page.html
+++ b/cloudpilot-ionic/src/app/page/about/about.page.html
@@ -29,4 +29,6 @@
     <a href='javascript:' (click)="showChangelog()">Changelog</a>
   </div>
 
+  <img class="logo" src="assets/logo.svg">
+
 </ion-content>
