--- a/cloudpilot-ionic/src/app/page/emulation/context-menu/context-menu.component.html
+++ b/cloudpilot-ionic/src/app/page/emulation/context-menu/context-menu.component.html
@@ -1,5 +1,5 @@
 <ion-list>
-  <ion-item button [detail]="false" (click)="power()" [disabled]="!emulationService.isRunning()">
+  <ion-item button [detail]="false" (click)="power()" [disabled]="!emulationService.isRunning() || powerDisabled">
     Power
   </ion-item>
   <ion-item button [detail]="false" (click)="reset()" [disabled]="!emulationService.isRunning()">
