--- a/cloudpilot-ionic/src/app/page/about/about.page.html
+++ b/cloudpilot-ionic/src/app/page/about/about.page.html
@@ -27,6 +27,7 @@
     cloudpilot version {{version}}
     <br />
     <a href='javascript:' (click)="showChangelog()">Changelog</a>
+    <div *ngIf="serviceWorkerAvailable">app cached for offline use</div>
   </div>
 
   <img class="logo" src="assets/logo.svg">
