Support unmanaged hotsync name.

--- a/cloudpilot-ionic/src/app/page/settings/settings.page.html
+++ b/cloudpilot-ionic/src/app/page/settings/settings.page.html
@@ -42,7 +42,7 @@
 
     <ion-item lines="inset" *ngIf="showProxyServer">
       <ion-label position="stacked">Proxy server</ion-label>
-      <ion-input placeholder="proxy host or host:port or URI" formControlName="proxyServer"></ion-input>
+      <ion-input placeholder="Proxy server host or URL" formControlName="proxyServer"></ion-input>
     </ion-item>
   </form>
 
