Add connection indicator.

--- a/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
+++ b/cloudpilot-ionic/src/app/page/emulation/emulation.page.html
@@ -22,6 +22,9 @@
       <ion-button *ngIf="eventHandlingService.isGameMode()" (click)="showGameModeHint()">
         <ion-icon name="game-controller-outline"></ion-icon>
       </ion-button>
+      <ion-button *ngIf="proxyService.isConnected()" (click)="showProxyConnectedHint()">
+        <ion-icon name="swap-vertical-outline"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
