Add test button to settings, add timeout to handshake, fixes.

--- a/cloudpilot-ionic/src/app/page/settings/settings.page.html
+++ b/cloudpilot-ionic/src/app/page/settings/settings.page.html
@@ -42,8 +42,12 @@
 
     <ion-item lines="inset" *ngIf="showProxyServer">
       <ion-label position="stacked">Proxy server</ion-label>
-      <ion-input placeholder="Proxy server host or URL" formControlName="proxyServer"></ion-input>
+      <div class="server-container">
+        <ion-input placeholder="Proxy server host or URL" formControlName="proxyServer"></ion-input>
+        <ion-button [disabled]="!proxyServerValid" (click)="testProxyConnection()">Test</ion-button>
+      </div>
     </ion-item>
+
   </form>
 
 </ion-content>
