--- a/cloudpilot-ionic/src/app/page/settings/settings.page.html
+++ b/cloudpilot-ionic/src/app/page/settings/settings.page.html
@@ -45,7 +45,10 @@
       <div class="server-container">
         <ion-input placeholder="Proxy server host or URL" formControlName="proxyServer"></ion-input>
         <ion-button [disabled]="!proxyServerValid"
-          (click)="$event.preventDefault(); $event.stopPropagation(); testProxyConnection()">Test</ion-button>
+          (click)="$event.preventDefault(); $event.stopPropagation(); testProxyConnection()"
+          (touchstart)="$event.preventDefault(); $event.stopPropagation(); testProxyConnection()">
+          Test
+        </ion-button>
       </div>
     </ion-item>
 
