--- a/cloudpilot-ionic/src/app/page/emulation/emulation.page.scss
+++ b/cloudpilot-ionic/src/app/page/emulation/emulation.page.scss
@@ -8,7 +8,33 @@ ion-title {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     padding: 3px;
+
+    &.running-session {
+        background: radial-gradient(circle, #ccc 0%, #eee 100%);
+    }
+
+    &.no-session {
+        text-align: center;
+        padding: 1em
+    }
+
+    ion-radio-group {
+        margin-top: 2em;
+        width: 100%;
+        max-width: 30em;
+    }
+
+    ion-button {
+        &:first-of-type {
+            margin-top: 3em;
+        }
+
+        margin-top: 1em;
+        width: 100%;
+        max-width: 20em;
+    }
 }
 
 .container.running-session {
