Installation from URL.

--- a/cloudpilot-ionic/src/app/page/settings/settings.page.html
+++ b/cloudpilot-ionic/src/app/page/settings/settings.page.html
@@ -69,6 +69,11 @@
         <ion-toggle formControlName="showStatistics"></ion-toggle>
       </ion-item>
 
+      <ion-item lines="none">
+        <ion-label>Remote installation sources</ion-label>
+        <ion-toggle formControlName="enableRemoteInstall"></ion-toggle>
+      </ion-item>
+
     </form>
   </div>
 
