--- a/cloudpilot-ionic/src/app/page/about/about.page.html
+++ b/cloudpilot-ionic/src/app/page/about/about.page.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="version">
-    cloudpilot version {{version}}
+    CloudpilotEmu version {{version}}
     <br />
     <a href='javascript:' (click)="showChangelog()">Changelog</a>
     <div *ngIf="serviceWorkerAvailable">app cached for offline use</div>
