Add session settings to emulation menu.

--- a/cloudpilot-ionic/src/app/component/session-settings/session-settings.component.html
+++ b/cloudpilot-ionic/src/app/component/session-settings/session-settings.component.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 <ion-content fullscreen>
-    <form [formGroup]="formGroup" (keydown)="formKeyDown($event)">
+    <form [formGroup]="formGroup" (keydown.enter)="onEnter()">
         <ion-item lines="inset">
             <ion-label position="stacked">Session name</ion-label>
             <ion-input placeholder="Enter session name" formControlName="name"></ion-input>
